<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AddNewNote">


    <TextView
        android:id="@+id/AddNewNote"
        android:layout_width="252dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/add_new_note"
        android:textColor="#F1E3E3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="305dp"
        android:layout_height="446dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner2"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364">

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="265dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="#8625A5E1"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#1B5E20" />

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="265dp"
            android:layout_height="334dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="#8625A5E1"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="16"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#1B5E20" />


    </LinearLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="121dp"
        android:layout_height="55dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/save"
        android:textColor="#1976D2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>